Prova modifica informazioni
modifica delle informazioni

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-hello word!
+<html>
+  <head>
+    <title>Giorgio</title>
+  </head>
+  
+  <body>
+    <h1>Sito web di Brugali Giorgio</h1>
+    <h3>Informazioni:</h3>
+    <p>Studente di Ingegneria informatica</p>
+  </body>
+</html>
